fixed a layout issue with the payment widget on the home page

--- a/src/sass/myservice-widget-tiles.scss
+++ b/src/sass/myservice-widget-tiles.scss
@@ -410,3 +410,9 @@
   display: flex;
   flex: 1;
 }
+
+//TODO remove the below temporary fix when enough free time
+
+#widget-payment .widget-tile__content {
+  flex-direction: column;
+}
